# WebSDN

./: README.md  application.py  meson.build  mininet_run.sh
mininet/: topology1.py  topology_doubleLoop.py  topology_linear.py  topology_loop.py
src/: NetworkDescription.py  NetworkLayout.py  NetworkLayoutParser.py  application.py  controller.py  webapp.py
src/assets/: script.js  style.css
src/controller/: NetworkLayout.py  controller.py
